src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail55.jova
class Main {

  public int main() {
    bool test;
    bool test2;
    int x;
    bool boolean;
    int integer;
    int value;
    String wort;

    boolean = true;
    wort = "bla";
    value = 5;
    test = wort > 3;
    test = wort > value;
    test = nix > value;
    test = value > wort;
    test = value > nix;
    test = wort > boolean;
    test = 2 + 5 > 3 + wort;
    test = 2 + 5 > 3 + nix;
    test = 2 + wort > value + 8;
    test = 2 + nix > value + 8;
    test = value + 5 > 3 + wort;
    test = value + 5 > 3 + nix;
    test = 2 < wort;
    test = 2 < nix;
    test = wort < 3;
    test = 2 < wort;
    test = value < wort;
    test = value < nix;
    test = 2 + 5 < 3 + wort;
    test = wort + 5 < 3 + value;
    test = nix + 5 < 3 + value;
    test = wort <= 3;
    test = nix <= 3;
    test = value <= wort;
    test = wort <= value;
    test = 2 + 5 >= wort + 8;

    test = y >= 3;
    test = y +3;

    test = z * 3;
    test = z * (5 * "nix");
    test = 2 + z;
    test = 2 + "not";
    boolean = true && false;
    boolean = true && nix;
    boolean = true && n;

    boolean = true || false;
    boolean = true || nix;
    boolean = true || n;

    return 0;
  }

}